size comment + fix button  + scrollbar proposal

--- a/app/client/src/components/Map/Map.scss
+++ b/app/client/src/components/Map/Map.scss
@@ -20,7 +20,7 @@
 .leaflet-popup-content-wrapper {
     font-size: 16px;
     line-height: 24px;
-    height: 350px;
+    height: 360px;
     width: 400px;
     display: flex;
     @media (max-width: 600px) {
@@ -286,7 +286,7 @@
                 .comments{
                     width: 100%;
                     padding-top: 1rem;
-                    height: 240px;
+                    height: 245px;
                     display: flex ;
                     flex-direction: column;
                     overflow: auto;
@@ -294,7 +294,7 @@
                         display: flex;
                         flex-direction: column;
                         font-size: .8rem;
-                        min-height: 90px !important;
+                        min-height: 130px !important;
              
                         .head{
                             color: vars.$tertiary-color;
@@ -327,6 +327,7 @@
                 }
                 .add{
                     height: 20px !important;
+                    margin-top: .4rem;
                     display: flex;
                     width: 100%;
                     flex-direction: row;
@@ -338,7 +339,7 @@
                         border-color: tomato;
                     }
                     input{
-                        height: 100%;
+                        height: 100% !important;
                         width: 70%;
                         border: none;
                         outline: none;
@@ -347,11 +348,13 @@
                         }
                     }
                     button{
-                        height: 100%;
+                        height: 100% !important;
                         width: 30%;
-                        border: 0;
+                        border: none;
+                        outline: none;
                         background-color: vars.$primary-color;
                         color: white;
+                        cursor: pointer;
                         &.disabled{
                             background-color: vars.$gray;
                             cursor: not-allowed;
